# displays

./: .gitignore  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  build.gradle  build.gradle.kts  crowdin.yml  gradle.properties  settings.gradle  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
common/: build.gradle  build.gradle.kts
common-client/: build.gradle
common-client-1_21_8/: build.gradle  gradle.properties
common-client-1_21_8/src/main/resources/: dreamdisplays.accesswidener  dreamdisplays.mixins.json
common-client/src/main/java/com/inotsleep/dreamdisplays/: Config.java  DreamDisplaysCommon.java
common-client/src/main/resources/: dependencies.yml
common-client/src/main/resources/assets/dreamdisplays/lang/: de_de.json  en_us.json  ru_ru.json
common/src/main/java/com/dreamdisplays/: Config.java  Focuser.java  Initializer.java  Initializer.kt
common/src/main/java/com/dreamdisplays/downloader/: Downloader.java  Error.java  Init.java  Menu.java
common/src/main/java/com/dreamdisplays/mixins/: Crosshair.java  Crosshair.kt  GStreamer.java
common/src/main/java/com/dreamdisplays/net/: Delete.java  DeletePacket.kt  Info.java  InfoPacket.kt  Packets.java  Premium.java  PremiumPacket.kt  Report.java  ReportPacket.kt  RequestSync.java  RequestSyncPacket.kt  Sync.java  SyncPacket.kt  Version.java  VersionPacket.kt
common/src/main/java/com/dreamdisplays/render/: Render.kt  ScreenRenderer.java  ScreenWorldRenderer.java
common/src/main/java/com/dreamdisplays/screen/: Configuration.java  Converter.java  Manager.java  MediaPlayer.java  Menu.java  Screen.java  Screen.kt  Settings.java  Settings.kt
fabric/: build.gradle  build.gradle.kts  gradle.properties
fabric-1_21_8/: build.gradle  gradle.properties
fabric-1_21_8/src/main/resources/: dreamdisplays.mixins.json  fabric.mod.json
fabric/src/main/java/com/dreamdisplays/: DreamDisplaysMod.java
fabric/src/main/java/dreamdisplays/: Config.java  DreamDisplaysMod.java  Mod.java  PlatformlessInitializer.java  WindowFocusMuteThread.java
fabric/src/main/java/dreamdisplays/downloader/: GStreamerDownloadListener.java  GStreamerDownloader.java  GStreamerDownloaderMenu.java  GStreamerErrorScreen.java  GstreamerDownloadInit.java
fabric/src/main/java/dreamdisplays/mixins/: CrossHairMixin.java  GStreamInitMixin.java
fabric/src/main/java/dreamdisplays/net/: DeletePacket.java  DisplayInfoPacket.java  PremiumPacket.java  ReportPacket.java  RequestSyncPacket.java  SyncPacket.java  VersionPacket.java
fabric/src/main/java/dreamdisplays/render/: RenderUtil.java  RenderUtil2D.java  ScreenWorldRenderer.java
fabric/src/main/java/dreamdisplays/screen/: DisplayConfScreen.java  MediaPlayer.java  Screen.java  ScreenManager.java
fabric/src/main/java/dreamdisplays/util/: Facing.java  ImageUtil.java  RCUtil.java  Utils.java
fabric/src/main/resources/: dreamdisplays.classtweaker  dreamdisplays.mixins.json  fabric.mod.json  quilt.mod.json
forge/: build.gradle
forge-1_21_8/: build.gradle  gradle.properties
forge-1_21_8/src/main/resources/: dreamdisplays.mixins.json
forge/src/main/resources/: pack.mcmeta
gradle/: libs.versions.toml
mod/: build.gradle  gradle.properties
mod-common/: build.gradle.kts
mod-common/src/main/java/com/dreamdisplays/: Config.java  PlatformlessInitializer.java
mod-common/src/main/java/displays/: Mod.java  PlatformlessInitializer.java
mod-common/src/main/java/displays/mixins/: GStreamInitMixin.java
mod-common/src/main/java/displays/net/: DisplayInfoPacket.java  PremiumPacket.java  SyncPacket.java  VersionPacket.java
mod-common/src/main/java/displays/render/: RenderUtil.java
mod-common/src/main/java/displays/screen/: MediaPlayer.java  Screen.java
mod-common/src/main/java/displays/util/: RCUtil.java
mod-common/src/main/resources/: dreamdisplays.accesswidener  dreamdisplays.classtweaker
mod/src/main/resources/: dreamdisplays.mixins.json  fabric.mod.json  frogdisplays.mixins.json
native/: CMakeLists.txt  README  build.sh
native/src/: color_conversion.c  image_converter.c  image_converter.h  image_scaling.c  math_utils.c
neoforge/: build.gradle.kts
neoforge/src/main/java/com/dreamdisplays/: DreamDisplaysMod.java
neoforge/src/main/java/dreamdisplays/: DreamDisplaysMod.java
neoforge/src/main/resources/: dreamdisplays.mixins.json
paper/: build.gradle
paper/src/main/resources/: plugin.yml
plugin/: build.gradle  settings.gradle
plugin/src/main/resources/: plugin.yml
spigot/: build.gradle  build.gradle.kts
spigot/src/main/java/com/dreamdisplays/: Config.java  Config.kt  Main.kt
spigot/src/main/java/dreamdisplays/: Config.java  DreamDisplaysPlugin.java
spigot/src/main/java/dreamdisplays/commands/: DisplayCommand.java
spigot/src/main/java/dreamdisplays/datatypes/: DisplayData.java  PlayState.java  SelectionData.java  SyncPacket.java
spigot/src/main/java/dreamdisplays/listeners/: PlayerListener.java  SelectionListener.java
spigot/src/main/java/dreamdisplays/managers/: DisplayManager.java  PlayStateManager.java  PlayerManager.java
spigot/src/main/java/dreamdisplays/storage/: Storage.java
spigot/src/main/java/dreamdisplays/utils/: GithubReleaseFetcher.java  MessageUtil.java  ParticleUtil.java  ReportSender.java  Utils.java
spigot/src/main/kotlin/com/dreamdisplays/: Config.kt  Main.kt
spigot/src/main/resources/: config.toml  plugin.yml
src-unused/client/kotlin/ru/l0sty/frogdisplays/: BasicBrowser.kt  DisplayBlock.kt  DisplayBlockEntity.kt  DisplayBlockEntityRenderer.kt  FrogDisplaysClient.kt  RenderUtil.kt
src-unused/main/kotlin/ru/l0sty/frogdisplays/: FrogDisplays.kt
src-unused/main/resources/: fabric.mod.json  frogdisplays.mixins.json
src/main/java/ru/l0sty/frogdisplays/: CinemaMod.java  CinemaModClient.java  Config.java  FrogDisplaysMod.java  FrogdisplaysMod.java  Mod.java  PlatformlessInitializer.java  VideoSettings.java  WindowFocusMuteThread.java  utils.kt
src/main/resources/: cinemamod.mixins.json  fabric.mod.json  frogdisplays.mixins.json
(+471 files in other folders)
